# CSE1

./: .gitignore  README.md
CSEI/: README.md
CSEI/CSE1 Handbook/: main.tex  technical.tex
CSEI/boat_model/: CMakeLists.txt  package.xml
CSEI/boat_model/launch/: display.launch
CSEI/boat_model/meshes/: pool.stl  water.stl
CSEI/boat_model/rviz_config/: Boat.rviz
CSEI/boat_model/src/: node.py
CSEI/boat_model/urdf/: boat.urdf  pool.urdf  water.urdf
CSEI/controller/src/: ctrl_joy.py  ctrl_node.py  ctrl_stud.py  lib.py  math_tools.py
CSEI/gain_server/cfg/: gains.cfg
CSEI/imu_driver/: CMakeLists.txt  package.xml
CSEI/imu_driver/include/: adis16470.h
CSEI/imu_driver/src/: adis16470.cpp  csei_imu_node.cpp
CSEI/messages/msg/: reference_message.msg
CSEI/observer/src/: lib.py  obs_student.py
CSEI/simulator/src/: CSEI.py  math_tools.py
CSEI/testing-nodes/controller/: CMakeLists.txt
CSEI/testing-nodes/controller/src/: ctrl_joy.py  ctrl_stud.py  lib.py
CSEI/testing-nodes/observer/src/: lib.py  math_tools.py  obs_node.py  obs_student.py
CSEI/tf_publisher/: CMakeLists.txt  package.xml
CSEI/tf_publisher/src/: node.py
drivers/adis16470_driver/: CMakeLists.txt  README.md  package.xml
drivers/adis16470_driver/src/: adis16470.cpp
drivers/mx106_driver/: CMakeLists.txt  README.md  package.xml
drivers/mx106_driver/include/mx106_driver/: mx106.h
drivers/mx106_driver/src/: mx106.cpp
drivers/pca9685_driver/: CMakeLists.txt  README.md  package.xml
drivers/pca9685_driver/include/pca9685_driver/: pca9685.h
drivers/pca9685_driver/src/: pca9685.cpp
